--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -11,7 +11,7 @@
 <body>
 <a href="/" class="black">
     <h1>
-        Welcome to Busan HighSchool e-haksa.
+        Busan HighSchool e-haksa
     </h1>
 </a>
 {{#title}}
