--- a/src/main/resources/templates/merit/findByStudentName/search_by_student_name.mustache
+++ b/src/main/resources/templates/merit/findByStudentName/search_by_student_name.mustache
@@ -1,5 +1,5 @@
 {{>layout/header}}
-<form action="/student/findByName" method="GET">
+<form action="/gui/point/findByStudentName" method="GET">
     <p>
         <label>
             성명:
